# tod_vehicle_interface

./: README.md
tod_lgsvl_bridge/: CMakeLists.txt  README.md  package.xml
tod_lgsvl_bridge/config/: sensors.json
tod_lgsvl_bridge/launch/: tod_lgsvl_bridge.launch
tod_lgsvl_bridge/src/: CMakeLists.txt  OdometryOffsetNode.cpp  SafetyDriverStatusPublisher.cpp  VehicleCommandToLGSVL.cpp  VehicleDataFromLGSVL.cpp
tod_rc-car_bridge/: CMakeLists.txt  README.md  package.xml
tod_rc-car_bridge/launch/: tod_rc-car_bridge.launch
tod_rc-car_bridge/src/: CMakeLists.txt  VehicleCommandToRCCarNode.cpp  VehicleDataFromRCCarNode.cpp
tod_tum-q7_bridge/: CMakeLists.txt  README.md  package.xml
tod_tum-q7_bridge/launch/: GPS.yaml  tod_localization.launch  tod_tum-q7_bridge.launch
tod_tum-q7_bridge/src/: CMakeLists.txt  ControlCommandToAutoboxNode.cpp  SafetyDriverStatusFromAutoboxNode.cpp  VehicleDataFromAutoboxNode.cpp
tod_vehicle_bridge/: CMakeLists.txt  README.md  package.xml
tod_vehicle_bridge/launch/: tod_vehicle_bridge.launch
tod_vehicle_bridge/src/operator/: CMakeLists.txt  GPSReceiver.cpp  OdometryReceiver.cpp  VehicleDataReceiver.cpp
tod_vehicle_bridge/src/vehicle/: CMakeLists.txt  ControlCommandMultiplexerNode.cpp  GPSSender.cpp  OdometrySender.cpp  VehicleDataSender.cpp
tod_vehicle_config/: CMakeLists.txt  README.md  package.xml
tod_vehicle_config/vehicle_config/lgsvl/: sensors-camera.yaml  sensors-lidar.yaml  vehicle-info.yaml  vehicle-params.yaml  vehicle-transforms.yaml
tod_vehicle_config/vehicle_config/lgsvl/camera-calibration/: CameraFrontCenter.yaml  CameraFrontLeft.yaml  CameraFrontRight.yaml  CameraRearCenter_1920x1200.yaml  CameraTopViewFront.yaml  CameraTopViewLeft.txt
tod_vehicle_config/vehicle_config/rc-car/: sensors-camera.yaml  sensors-lidar.yaml  vehicle-params.yaml  vehicle-transforms.yaml
tod_vehicle_config/vehicle_config/rc-car/camera-calibration/: left.yaml  left_raw.yaml  right.yaml  right_raw.yaml
tod_vehicle_config/vehicle_config/template/: sensors-camera.yaml  sensors-lidar.yaml  vehicle-params.yaml  vehicle-transforms.yaml
tod_vehicle_config/vehicle_config/tum-q7/: sensors-camera.yaml  sensors-lidar.yaml  vehicle-info.yaml  vehicle-params.yaml  vehicle-transforms.yaml
tod_vehicle_config/vehicle_config/tum-q7/camera-calibration/: CameraFrontCenter.yaml  CameraFrontLeft.yaml  CameraFrontRight.yaml  CameraRearCenter.yaml  CameraTopViewRear.txt
tod_vehicle_sim/: CMakeLists.txt  README.md  package.xml
tod_vehicle_sim/launch/: tod_vehicle_sim.launch
tod_vehicle_sim/src/: CMakeLists.txt  VehicleModel.cpp  VehicleModel.h  VehicleSimNode.cpp
