<?xml version="1.0"?>
<package format="2">
<name>tod_lgsvl_bridge</name>
<version>0.0.0</version>
<description>The tod_lgsvl_bridge package</description>

<maintainer email="simon.hoffmann@tum.de">simon</maintainer>

<license>LGPLv3</license>

<buildtool_depend>catkin</buildtool_depend>

<build_depend>roscpp</build_depend>
<build_depend>tod_msgs</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>tod_msgs</build_depend>
<build_depend>lgsvl_msgs</build_depend>
<build_depend>tod_vehicle_config</build_depend>
<build_depend>tod_network</build_depend>
<build_depend>autoware_msgs</build_depend>


<build_export_depend>roscpp</build_export_depend>
<build_export_depend>std_msgs</build_export_depend>
<build_export_depend>tod_msgs</build_export_depend>
<build_export_depend>lgsvl_msgs</build_export_depend>
<build_export_depend>tod_vehicle_config</build_export_depend>
<build_export_depend>tod_network</build_export_depend>


<exec_depend>roscpp</exec_depend>

</package>
