<?xml version="1.0"?>
<package format="2">
    <name>tod_rc-car_bridge</name>
    <version>1.0.0</version>
    <description>The tod_rc-car_bridge package</description>

    <maintainer email="florian.sauerbeck@tum.de">Florian Sauerbeck</maintainer>

    <license>LGPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>ackermann_msgs</build_depend>
    <build_depend>tod_msgs</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>nav_msgs</build_export_depend>
    <build_export_depend>ackermann_msgs</build_export_depend>
    <build_export_depend>tod_msgs</build_export_depend>

    <exec_depend>roscpp</exec_depend>

    <export></export>
</package>
