<?xml version="1.0"?>
<package format="2">
  <name>tod_vehicle_config</name>
  <version>1.0.0</version>
  <description>The tod_vehicle_config package</description>

  <maintainer email="johannes.feiler@tum.de">Johannes Feiler</maintainer>
  <maintainer email="simon.hoffmann@tum.de">Simon Hoffmann</maintainer>
  <maintainer email="domagoj.majstorovic@tum.de">Domagoj Majstorovic</maintainer>
  <maintainer email="andreas.schimpe@tum.de">Andreas Schimpe</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>
</package>
